<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_margin="16dp">
    <EditText
        android:id="@+id/search_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/search_query"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="250dp" />
    <CheckBox
        android:id="@+id/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_arts"
        android:layout_marginTop="12dp"/>
    <CheckBox
        android:id="@+id/checkbox_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_business"
        android:layout_marginTop="12dp"
        />

    <CheckBox
        android:id="@+id/checkbox_entrepreneurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_entrepreneur"
        android:layout_marginTop="12dp"
        />

    <CheckBox
        android:id="@+id/checkbox_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_politics"
        android:layout_marginTop="12dp"

        />

    <CheckBox
        android:id="@+id/checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_sports"
        android:layout_marginTop="12dp"
        />

    <CheckBox
        android:id="@+id/checkbox_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_item_travel"
        android:layout_marginTop="12dp"
        />
    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginTop="16dp"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimary"/>
</LinearLayout>